tests/parser-test-files/bad-files/parse-let.1.error
error: Malformed let
  --> test:4:14
   |
 4 |  (define f (let))
   |                ^ expected let binding list
